# scl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md
ardgen/: ardgen.py  cbmgen.py  injector.py  main.py  parsegen-8.09.2024.py  parsegen.py
ardgen/enums/: cbe.py  parse.py
doc/: Doxyfile  Doxyfile-dark  make-dark.sh
examples/command/: CMakeLists.txt  allexamples.hpp  main.cpp
examples/command/exs/: arguments.hpp  baseexample.hpp  example01.cpp  example01.hpp  example02.cpp  example02.hpp  example03.cpp  example03.hpp  example04.cpp  example04.hpp  example05.cpp  example05.hpp  example06.cpp  example06.hpp  example07.cpp  example07.hpp  example08.cpp  example08.hpp  example09.cpp  example09.hpp  example10.cpp  example10.hpp  example11.cpp  example11.hpp  example12.cpp  example12.hpp  example13.cpp  example13.hpp  example14.cpp  example14.hpp  example15.cpp  example15.hpp
examples/command/exs/tests/: CMakeLists.txt
examples/common/: CMakeLists.txt  main.cpp
examples/common/include/: buttonwidget.hpp  consolearea.hpp  consolewidget.hpp  coprintf.hpp  properties.hpp  textmap.hpp  tokencolors.h  utils.hpp
examples/common/src/: buttonwidget.cpp  consolewidget.cpp  coprintf.cpp  properties.cpp  textmap.cpp
examples/lexer/: CMakeLists.txt  main.cpp
include/scl/: ard.h  argument.h  argument.hpp  calt.h  command.h  command.hpp  consolebuffer.h  error.h  executor.h  inplace.h  parse.h  token.h  utils.hpp
single-include/include/scl/: scl.hpp
src/: ard.c  consolebuffer.c  executor.c  inplace.c  parse.c  singleinclude.cpp  token.c  unused.cpp
